# hpcgra

./: .gitignore  README.md
generator_asm/: README.md  run.sh
generator_asm/src/compiler/DFG/: CMakeLists.txt
generator_asm/src/compiler/DFG/src/: DFGGeneration.cpp
generator_asm/src/place/: CMakeLists.txt  listinha.txt  mac.dot  sa_openmp.cpp
generator_asm/src/place/arch/: cgra_2x2.json  cgra_4x4.json  cgra_mesh_10x10.json  cgra_mesh_11x11.json  cgra_mesh_12x12.json  cgra_mesh_13x13.json  cgra_mesh_14x14.json  cgra_mesh_15x15.json  cgra_mesh_16x16.json  cgra_mesh_17x17.json  cgra_mesh_18x18.json  cgra_mesh_19x19.json  cgra_mesh_20x20.json  cgra_mesh_21x21.json  cgra_mesh_22x22.json  cgra_mesh_23x23.json  cgra_mesh_24x24.json  cgra_mesh_25x25.json  cgra_mesh_26x26.json  cgra_mesh_27x27.json  cgra_mesh_28x28.json  cgra_mesh_29x29.json  cgra_mesh_2x2.json  cgra_mesh_30x30.json  cgra_mesh_31x31.json  cgra_mesh_32x32.json  cgra_mesh_3x3.json  cgra_mesh_4x4.json  cgra_mesh_5x5.json  cgra_mesh_6x6.json  cgra_mesh_7x7.json  cgra_mesh_8x8.json  cgra_mesh_9x9.json  cgra_one-hop_10x10.json  cgra_one-hop_11x11.json  cgra_one-hop_12x12.json  cgra_one-hop_13x13.json  cgra_one-hop_14x14.json  cgra_one-hop_15x15.json  cgra_one-hop_16x16.json  (+23 more)
generator_asm/src/place/dot/: mac.dot
generator_asm/src/place/include/: annealing.h  buffer.h  data.h  instance.h  readArch.h  read_arch.h  routing.h
generator_asm/src/place/src/: main.cpp  sa_openmp2HOMOG.cpp
simul/: dot_simul.py  simul.py  ver
simul_tests/: cgra_2x2.json  mac.dot  networkx.txt  vector_sum.map
src/: a.bit  cgra.py  (+15 more)
(+127 files in other folders)
